SFGoogleIntegration-main/GoogleSheetIntegratiom/force-app/main/default/objects/google_sheet__c/google_sheet__c.object-meta.xml
<CustomObject>
    <label>google sheet</label>
    <nameField>
        <label>google Sheet ext Id Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>google sheets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>