SFGoogleIntegration-main/GoogleSheetIntegratiom/force-app/main/default/objects/google_sheet__c/fields/Dev_Name__c.field-meta.xml
<CustomField>
    <fullName>Dev_Name__c</fullName>
    <label>Dev Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>