SFGoogleIntegration-main/GoogleSheetIntegratiom/force-app/main/default/objects/google_sheet__c/fields/google_Sheet_ext_Id__c.field-meta.xml
<CustomField>
    <fullName>google_Sheet_ext_Id__c</fullName>
    <label>google Sheet ext Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>