SFGoogleIntegration-main/GoogleSheetIntegratiom/force-app/main/default/objects/google_sheet__c/fields/Google_url__c.field-meta.xml
<CustomField>
    <fullName>Google_url__c</fullName>
    <label>Google url</label>
    <type>Url</type>
</CustomField>